--- a/meu-linktree1.0/index.html
+++ b/meu-linktree1.0/index.html
@@ -72,5 +72,8 @@
             </a>
         </li>-->
     </ul>
+      <footer>
+        Desenvolvido por Thiago Allan
+      </footer>
 </body>
 </html>
