--- a/meu-linktree1.0/index.html
+++ b/meu-linktree1.0/index.html
@@ -11,7 +11,7 @@
     <div class="profile">
         <img src="img/euMenor.jpeg" alt="foto de thiago" class="avatar">
         <h1>Thiago Allan</h1>
-        <h2>Aprendiz de Dev | Metido a Filmaker | Tentando ser Youtuber</h2>
+        <h2>Aprendiz de Dev | Metido a Filmaker <br> Tentando ser Youtuber</h2>
     </div>
     <ul class="socialmedia">
         <li>
