--- a/meu-linktree1.0/index.html
+++ b/meu-linktree1.0/index.html
@@ -11,11 +11,12 @@
     <div class="profile">
         <img src="img/euMenor.jpeg" alt="foto de thiago" class="avatar">
         <h1>Thiago Allan</h1>
-        <h2>Aprendiz de Dev | Metido a Filmaker <br> Tentando ser Youtuber</h2>
+        <h2>Aprendiz de Dev | Metido a Filmaker<br> Tentando ser Youtuber</h2>
     </div>
     <div class="iframe-container">
-        <iframe src="https://www.youtube.com/embed/C8EcSaXR8dQ?autoplay=1" width="560" height="315" 
-        frameborder="0"></iframe>
+        <iframe class="video" src="https://www.youtube.com/embed/YBrGkiBzsTU" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+        picture-in-picture" allowfullscreen=""></iframe>
     </div>
     <ul class="socialmedia">
         <li>
@@ -38,13 +39,20 @@
                 <img src="img/github.svg" alt="Github">
             </a>
         </li>
-       <!--<li>
+        <!--<li>
             <a href="https://wa.me/351912698676">
                 <img src="img/whatsapp.png" alt="Whatsapp">
             </a>
         </li>-->
     </ul>
     <ul class="links-list">
+        <li>
+            <a href="https://go.hotmart.com/D48853407U">
+                -- FORMAÇÃO FULL STACK JAVASCRIPT --
+            <span>Você pode ter uma carreira brilhante como programador(a) e conquistar a tal 
+                sonhada vaga de emprego! Clique aqui e saiba mais! </span>
+            </a>
+        </li>
         <li>
             <a href="https://youtube.com/channel/UCIGoRwTTbE091sZ6D4aVNug">
                 Canal no Youtube
@@ -76,8 +84,9 @@
             </a>
         </li>-->
     </ul>
-      <footer>
+
+    <footer>
         Desenvolvido por Thiago Allan
-      </footer>
+    </footer>
 </body>
 </html>
