--- a/meu-linktree1.0/index.html
+++ b/meu-linktree1.0/index.html
@@ -48,9 +48,15 @@
     <ul class="links-list">
         <li>
             <a href="https://go.hotmart.com/D48853407U">
-                -- FORMAÇÃO FULL STACK JAVASCRIPT --
+                -FORMAÇÃO FULL STACK JAVASCRIPT-
             <span>Você pode ter uma carreira brilhante como programador(a) e conquistar a tal 
                 sonhada vaga de emprego! Clique aqui e saiba mais! </span>
+            </a>
+        </li>
+        <li>
+            <a href="https://go.hotmart.com/D48853407U?ap=4a54">
+                Workshop GRATUITO!
+                <span>Seus primeiros passos com programação Web!</span>
             </a>
         </li>
         <li>
